--- a/MobileBus/app/Main.LgXhdpiPh.fmx
+++ b/MobileBus/app/Main.LgXhdpiPh.fmx
@@ -25,7 +25,7 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
         450s
         598s)
       inherited TabTestes: TTabItem
-        Size.Width = 112.000000000000000000
+        Size.Width = 50.000000000000000000
         ExplicitSize.cx = 114.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited PnlBotoesTeste: TPanel
@@ -45,21 +45,27 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
           inherited BtnAtualizarBanco: TButton
             Size.Width = 450.000000000000000000
           end
-          inherited BtnTeste: TButton
+          inherited BtnAddBusLine: TButton
+            Size.Width = 450.000000000000000000
+          end
+          inherited BtnAdd: TButton
+            Size.Width = 450.000000000000000000
+          end
+          inherited BtnAddRoute: TButton
             Size.Width = 450.000000000000000000
           end
         end
         inherited Panel1: TPanel
           Size.Width = 450.000000000000000000
-          Size.Height = 357.000000000000000000
+          Size.Height = 213.000000000000000000
           inherited lvTestes: TListView
             Size.Width = 450.000000000000000000
-            Size.Height = 357.000000000000000000
+            Size.Height = 213.000000000000000000
           end
         end
       end
       inherited Lista: TTabItem
-        Size.Width = 112.000000000000000000
+        Size.Width = 51.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVLinhas: TListView
@@ -68,7 +74,7 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
         end
       end
       inherited TabItem1: TTabItem
-        Size.Width = 112.000000000000000000
+        Size.Width = 61.000000000000000000
         ExplicitSize.cx = 213.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited LVParadas: TListView
@@ -85,72 +91,72 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
               PNG = {
                 89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
                 DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                082C49444154785ED59B7F8C5D4515C7BF33F7ED2FDBEE7B6FDB0AB4154D3080
-                BB246A843FD404FF50823FE10F22E0CF68084676DFA331D568AC95D406A3C246
-                B66F77D11A69A1352D14082AA9B4698C34294405A3095BA5B146816C6B69F7BD
-                6E7F6CDFBE77673C73EFD9F77BCB7BF7CEBD1B3FC9BD7BCECCBBF3E3CCCC9999
-                3B7705E262F8BFCB21BA6F06C42749BB0A525D01C8357EA49A8692C7493806E8
-                7DD0F3FB3179D9393F2E5AA237C0BD850F406113843695EFE5D0B7405F8416FB
-                21B1055B532F736024446780E19977C2113F048E7C0E180A98CF94060677C3D5
-                DFC5E4C07F38D02AD1186064E616EADEBBA8055770483D6E711EAAE724BADC13
-                9E5E722E872CBE1D4E4FB7A737A270966E5FC4C4C06F38C41AF60D902D6CA496
-                DBD2D4EABA740A483C4E393E8513A943D82B5C8EF1F9AC767079E14668DC0694
-                EF80E85AC5318CE90D439B904BDDCF0156B06B804C7E3384F83E6B3EA6F50446
-                A18AA36D3B36E33065CF0632C686A65EA4F50F309EBE8FB5D0D83340B6703BDD
-                1FF7950A7F8350B760EBC06BAC77C6BD3357424BD3EDDFEB0754B8837AC2132C
-                87C28E01864F0FA1E8FC196F431F8710FA59745FBC13A3579CF754F39B2ED9E5
-                C96F45499530B972CA93371C5F86F9DE3D54D44F7BBAE102E6D0E3DE50F94D08
-                EC182093FF1D75FD8FB346B82F2171FE46FCF4CA39AFE2C2D9435DF93A8E3C43
-                D7BF7DB18977D195F4248557A0DD3BBD4A7EE3B53E94971D029CEBBD380FB51F
-                B9819A3C8321F96F7032858FD5557EBEFC2694BAD5ABBCC171D6D7549E3A46F9
-                34DDFFD0F2F2E37CCC33E6598349CBA469D2AE206FF6F20E49F81E90CDBF40C9
-                7C9035C3308DCF875936F17FA7FB01CCA6BEED07B4C98AC24FA8743721977E0F
-                87183F730FDD277DC5A05FA4F80FB1128870061879730DE4D1372A539E52AF62
-                55FA3A6C16654F378CCCFC0342EEC078EA471CD21E99C277A0D55768EEBF9643
-                80FB7402A7F2AF40CA6BFC009A1AD5D5EB30B17ADAD73B27DC1070BAC831D5CC
-                F742FCA2AEF2B631699B3C2A50DE5E198213CE001A9F62C947895FB3141D8D79
-                3496A143423A417D350BB4782B1FC364EA9FAC4587C9C3E455A1A60C01086900
-                B18E051A0E89C5A636422F67A17D846EBD8F30D4E555538600047782D953FDB4
-                B63773BA8FD63B6989FA65D6AA1827E83BADEA6FDB23E939D55A27B84026FF18
-                F9822FB10614550ADB063A4DDF23780F904EC3B3DA9FF717C72C703AB92E4143
-                5E3D89D6BBC836086E80B174810AE26F670D42F0DB9D18A8CBEB7C09B915B4D3
-                0C46381FA08459E4F8B8622D4BCDB8C519F2D63FAEBBF046FD7618D85EFF1B5D
-                4DBB91DABCDC65C78DC360AD63C22D84B2F9094A62D857A8258A7DAB9BC6A2F1
-                0186C6B1FC8553173190E8618D9A42BF9F7AD55F59A3B467F6D07EE07D4DCF7D
-                6D26899E395A122FE38D55B83D41D859C0AF9C0715A8577E82957AE4F4BB71CF
-                CC89BAABB6F206553A58170F712BC7D4E3E5B150798338C04220C21AA0FE85A5
-                8BCFB35445CA8BC03A07097959DDD544F7CAFA78D1EB3FDB40531ECE732C0422
-                9C0172FD2FD2BDFAB252E233C89E69DC9C1CE4BFF5689DA3B1FEF5CA05759463
-                6A31BBC42A266D93C702AE3E426538C25A20C2F6004D15D9C50AA31EA44D4B35
-                DDD9E4F7689BFB2FD60CD3DEFC2EF5CB70F41F2B979653288136560BCC9F46F7
-                DC4656CC4688D2A4B46B71C4CF580A4C382768587FE61A285DE30B088D0769F7
-                F72DD6C811E60F430ABF6768DC4E717B3DB99191C24DD424FE9836461B5F7595
-                271B328507A8B4DF64CD708116406B822E801608D90388B1E4ABD4327F62CDC7
-                143493BF9B3542ACA78A3F44D7469C4DFE96039B3999FC3DF528AAA4DE0AEDDC
-                C5A166E5777743E50DBBC356DE10BE0718B28511BA8FFB4A0D5ADF4FADBDC91B
-                2A81D0825A7E0B2D7CAA43610181EB6D9C1AD931C0C8999590E76841523B3D31
-                5A3F07E16CE8D859656707A1DD51AA7C8B39DE7D09B99537B0120A3B0630640A
-                CF506AADE76E6FD5B76E27A4DA8EE9F4E1A6439105CCE1C89AFC87A1E457E919
-                DAECD0F4D9127D1772E9475809853D038CE46F2347F7246B8B634E8844D7F3E4
-                0F5E27855F65D1DA5EE01D14F791E613A106E651803EBF16DBD65EE09050D833
-                4056D1CAEE240D83DE3487440439C85CDA7F5B6C81F0B3C0023959A4D59C95D3
-                9A4B229DD0737F2DF60C60D0899D2C4583C2F318EB5F7C971800BB0618EF3F5C
-                FFBECE320EACB6BEC1AE010C09A761696C0BF724D2C9A759B1867D034044340C
-                E423D82CE659B1867D03E452C7686FF0026B76989A5254D29FB36695087A0021
-                C4632CD96168703FC6D29778ED1E9C680CE0E209CC94695AB485AE1EB65A261A
-                033C9CCA6320F12C6B61791D27D2FB58B64E3406F050769CA1C6B645F70E1688
-                CE0045D36AF3D50F1E82309B2F2391F8256B91109D01B6891274D71ED682B13C
-                FD0C1E5A6E3EA18D8C08878021E46CE068EB2BBF46ECED0617A37A38DA21EA28
-                EDFAAEA522063EF56987887B0021653067A8CCB740D156DE10BD015C457B03F3
-                996B479CF3DE1EC540F406305F79ABA143ACB589DE81DCAA595622257A031884
-                EE6018982FBF648E95C889C900EE5E6AD5E673BE56685AF74F245B1D9345423C
-                06F0BAB36EF30B32B995855888C70006E1B4B126A0A96FBC3FD4696FA7C46780
-                74FF01EFADCEA5D066EC473FF5D5129F01BC2F489DDDAC35338759F4951E652D
-                36E2338041E9C587411FB6E381D567598B8D780D3091FE0BDD5BFC93034D7D6E
-                8BC3D51888D7001EADD60483FB62F9CCB6054B6000F757DE4BCE5A9418632976
-                A2DF0DB622533848397FD493CDF780E3E9414F5E0296A00710B2E6759910B12D
-                7B5BB1340628979EA2FB05EFA8BB7BCEEE2BF4FF1B46F2BB68288CB2B6642C4D
-                0F3008B1831CC0924C7D5580FF0126CAA45F4E5A39D20000000049454E44AE42
+                082C49444154785ED59B7B6C1C471DC7BF337B7E91C477E724B44D42412A6A4A
+                630910ED1F8054FE80AA3CDB3F2AFAE05181AA226AFB1AA18040845085A80868
+                2DEA9CED42104D68829236B42A50A54D145534525A012D02C929A42208DACA09
+                697277711ECEF96E67F8CDEECFF7767AB73BBB161F69D7BFDFCCED3C7E33F39B
+                999DB5405C0CFD772944F74D80F834695741AA2B00B9CA8F54D350F23809C700
+                BD0F7A6E3F262F3BE7C7454BF406B8AFF021286C82D0A6F2BD1CFA36E88BD062
+                3F24B6606BEA150E8C84E80C30947B371CF143E0C89DC060C07CA634B06E375C
+                FD5D4C0EFC8703AD128D0186733753F7DE452DB88C43EA718B73503D27D1E59E
+                F0F492733964F19D707ABA3DBD1185B374FB1226067EC721D6B06F804C6123B5
+                DC96A656D7A55340E271CAF1499C481DC25EE1728CCFE7B583CB0B3740E356A0
+                7C3B44D70A8E614C6F18DC846CEA010EB0825D038CE4374388EFB3E6635A4F60
+                14AA38DAB663330E53F66C20636C68EA455AFF00E3E9FB590B8D3D03640AB7D1
+                FD715FA9F037087533B60EBCCE7A67DC97BB125A9A6EFF7E3FA0C2EDD4139E60
+                3914760C30747A1D8ACE9FF10EF47108A19F41F7C53B307AC5794F35BFE9925D
+                9EFC7694540993CB8F78F286E34B30D7BB878AFA594F375CC02C7ADCEB2BBF09
+                811D038CE49FA5AEFF49D608F76524CEDF809F5E39EB555C387BA82B0F72E419
+                BAFEED8B4DBC87AEA427294C41BB777895FCC6EB7D282F390438D779711E6A3F
+                B20335790643F2DFE08C143E5157F9B9F25B50EA16AFF206C7595F5379EA18E5
+                D374FF43CBCB8FF331CF98670D262D93A649BB82BCC9CB3B24E17B4026FF2225
+                F361D60C43343E1F61D9C4FF9DEE073093FAB61FD026CB0A3FA1D2DD886CFA7D
+                1C62FCCCBD749FF415837E89E23FC24A20C21960F8AD559047DFAC4C794A1DC5
+                8AF420368BB2A71B8673FF80903B309EFA1187B4C748E13BD0EA2B34F75FC321
+                C0FD3A8153F92948B9D60FA0A951AD5D838995D3BEDE39E18680D3458EA966BE
+                17E2177595B78D49DBE45181F2F6CA109C7006D0F80C4B3E4AFC96A5E868CCA3
+                B10C1D12D209EAAB59A0C55BF9182653FF642D3A4C1E26AF0A35650840480388
+                352CD070482C34B5117A290BED2374EB7D84A12EAF9A320420B813CC9CEAA7B5
+                BD99D37DB4DE494BD4BB58AB629CA0EFB4AABF6D8FA4E7546B9DE03C23F9C7C8
+                177C9935A0A852D836D069FA1EC17B80741A9ED5FEBCBF306681D3C975091AF2
+                EA49B4DE45B64170038CA50B54107F3B6B1082DFEEC4405D5EE74BC82EA39D66
+                30C2F90025CC22C7C715AB596AC62DE6C85BFFB8EEC29BF5DB61607BFD6F7435
+                ED466AF372971C370E83B58E09B710CAE4272889215FA19628F6AD6C1A8BC607
+                181AC7F2174F5DC440A287356A0AFD41EA557F658DD2CEEDA1FDC0079A9EFB5A
+                2E899E595A122FE18D55B83D41D859C0AF9C0715A8577E8A957AE4F47B716FEE
+                44DD555B79832A1DAC8B87B88563EAF1F298AFBC411C602110610D50FFC2D2C5
+                1758AA22E545608D8384BCACEE6AA27B797DBCE8F59F6DA0290FE739160211CE
+                00D9FE97E85E7D5929F13964CE346E4E0EF2DF7AB4CED258FF7AE5827A8D636A
+                31BBC42A266D93C73CAE7E95CAF02A6B8108DB03345564172B8C7A88362DD574
+                6792DFA36DEEBF58334C7BF3BBD4AFC0D17FAC5C5A1E4109B4B19A67EE34BA67
+                37B26236429426A55D8B237EC65260C23941C3FA336BA1748D2F20341EA2DDDF
+                B7582347983F0C29FC9EA1711BC5EDF5E446860B375293F863DA186D7CC5559E
+                6C18293C48A5FD266B860BB4005A157401344FC81E408C258F52CBFC89351F53
+                D091FC3DAC11623D55FC61BA36E26CF2F71CD8CCC9E4F3D4A3A8927A2BB47337
+                879A95DF3D0D9537EC0E5B7943F81E60C81486E93EEE2B3568FD00B5F6266FA8
+                04420B6AF92DB4F0A90E857904AEB3716A64C700C36796439EA30549EDF4C468
+                FD1C84B3A163679599B916DA1DA5CAB798E3DD97915D7E3D2BA1B06300C348E1
+                694AADF5DCEDADFAD6EC8454DB319D3EDC7428328F391C5995FF2894FC2A3D43
+                9B1D9A3E5BA2EF4636FD282BA1B06780E1FCADE4E87EC3DAC2981322D1F502F9
+                833748E15759B4B6177817C57DACF944A8813914A0CFAFC6B6D517382414F60C
+                9051B4B23B49C3A037CD2111410E329BF6DF165B20FC2C304F5616693567E5B4
+                E6924827F4DC5F8B3D03187462274BD1A0F002C6FA17DE2506C0AE01C6FB0FD7
+                BFAFB38C03ABAD6FB06B0043C269581ADBC23D8974F22956AC61DF0010110D03
+                F928368B3956AC61DF00D9D431DA1BBCC89A1DA6A61495F4E7AC5925821E4008
+                F1184B76185CB71F63E94BBC760F4E340670F10472659A166DA1AB87AD9689C6
+                008FA4F218483CC35A58DEC089F43E96AD138D013C941D67A8B16DC1BD8305A2
+                3340D1B4DA5CF5838720CCE4CB48247EC95A244467806DA204DDB587B5602C4D
+                3F8D87979A4F682323C2216008391B38DAFACAAF117BBBC185A81E8E76887A8D
+                767DD75011039FFAB443C43D809032983354E65BA0682B6F88DE00AEA2BD81F9
+                CCB523CE796F8F62207A0398AFBCD5E021D6DA44EF4076C50C2B9112BD010C42
+                77300CCC975F32CB4AE4C46400772FB56AF3395F2B34ADFB2792AD8EC922211E
+                0378DD59B7F90599DCCA422CC463008370DA5813D0D437DE1FEAB4B753E23340
+                BAFF80F756E7526833F6A39FFA6A89CF00DE17A4CE6ED69A99C50CFA4ABF622D
+                36E2338041E98587411FB6E3C19567598B8D780D3091FE0BDD5BFC93034D7D6E
+                8BC3D51888D7001EADD604EBF6C5F2996D0B16C100EEAFBD979CB52831C652EC
+                44BF1B6CC548E120E5FC714F36DF038EA7AFF5E44560117A00216B5E970911DB
+                B2B7158B638072E949BA5FF08EBABB67EDBE42FFBF6138BF8B86C2286B8BC6E2
+                F40083103BC8012CCAD45705F81F7DF4A45F99E68D170000000049454E44AE42
                 6082}
               FileName = 'D:\'#193'rea de Trabalho\icon.png'
             end>
@@ -161,7 +167,7 @@ inherited frmPrincipal_LgXhdpiPh: TfrmPrincipal_LgXhdpiPh
         end
       end
       inherited Mapa: TTabItem
-        Size.Width = 114.000000000000000000
+        Size.Width = 41.000000000000000000
         ExplicitSize.cx = 320.000000000000000000
         ExplicitSize.cy = 49.000000000000000000
         inherited MapView: TMapView
