--- a/MobileBus/app/GUI/AddBusStop.fmx
+++ b/MobileBus/app/GUI/AddBusStop.fmx
@@ -29,73 +29,73 @@ object AddBusStopForm: TAddBusStopForm
           PNG = {
             89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
             DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            082C49444154785ED59B7F8C5C5515C7BFF7BED95FB6DD99D9B6026D451388EC
-            22891AE10F35C13F94E04FF88308F8331A8291DD191A538DC65A496D302A6C64
-            3BBB8BD6482BAD69A1625049A54D63A449212A184D8002A146816C6B6967A6DB
-            1FDBD99977AFE7BE77767E6F9979EFBEB7F193BCB7E7DC3BEFFE38F7DE73EF7D
-            F7AD405C8CFE773944EF8D80F824695740AACB00B9C68F543350F218094701BD
-            0F7A7E3FA62F39EBC7454BF406B8BBF801286C82D0A6F2FD1CFA16E80BD0623F
-            24B6606BEA390E8C84E80C309A7F271CF143E0A5CF012301F339A281E1DD70F5
-            77313DF41F0EB44A340618CBDF44DD7B17B5E00A0E69C42DCD43F59D408F7BDC
-            D3CBCEA590A5B7C3E9EBF5F46614CED0ED8B981AFA3D8758C3BE01B2C58DD472
-            5B5A5A5D974F02894728C7C7703C75087B85CB313E9FD50E2E2D5E0F8D5B80CA
-            6D103DAB388631BD61641372A97B39C00A760D90296C8610DF67CDC7B49EC038
-            5469BC63C7661CA6ECDB40C6D8D0D28BB4FE0126D3F7B0161A7B06C8166FA5FB
-            23BE52E59F10EA266C1D7A8DF5EEB83B7F39B434DDFEBD7E4095DBA8273CCA72
-            28EC1860F4D47B5072FE86B761804308FD047A2FDC8EF1CBCE79AAF94D8FECF1
-            E4B7A2ACCA985EF982276F38B60CF3FD7BA8A89FF674C379CCA1CFBDAEFA9B10
-            D83140A6F047EAFA1F678D709F45E2DCF5F8E9E5735EC585B387BAF2351C799A
-            AE7FFB620BEFA22BE9490ACF43BBB77B95FCC66B03A82C3B0438D77A711E6A3F
-            724375790643F2DFE0648A1F6BA8FC7CE54D2875B3577983E3ACAFAB3C758CCA
-            29BAFFB9EDE5C7F99867CCB306939649D3A45D45DEE8E51D92F03D205B789A92
-            F9206B86511A9F0FB26CE28FD0FD006653DFF6033A6445F12754BA1B904B8F70
-            88F13377D17DDA570CFA198AFF102B81086780B137D740BEFA4675CA53EA65AC
-            4A5F83CDA2E2E986B1FC4B10720726533FE290CEC814BF03ADBE4273FF308700
-            F7E8044E169E879457F9013435AA2BD7616AF58CAF774FB821E0F49063AA9BEF
-            85F84543E56D63D2367954A1BCBD3204279C01343EC5928F12BF63293A9AF368
-            2E4397847482FADD2CD0E2AD7214D3A957598B0E9387C9AB4A5D190210D20062
-            1D0B341C128B4D6D845ECE42E708DD7E1F6168C8ABAE0C0108EE04B32707696D
-            6FE6741FAD77D212F5CBACD5304ED0775AB5DF7646D273AAF54E70814CE161F2
-            055F620D28A914B60D759BBE47F01E209DA667B53FEF2F8E59E074735D84A6BC
-            FA12ED77911D10DC0013E92215C4DFCE1A84E0B73B31D090D7B932722B68A719
-            8C703E4009B3C8F171C55A965A714B79F2D63F6EB8F046E37618D8DEF81B5D4B
-            BB99FABCDC65C78CC360AD6BC22D84B285294A62D457A8254A03AB5BC6A2F101
-            86E6B1FC8593173094E8638D9A42BF9F7AD53F58A3B4F37B683FF0BE96E7BE96
-            4FA26F8E96C4CB7863156E4F107616F02BE74105EA979F60A511397325EECA1F
-            6FB8EA2B6F50E5830DF11037734C235E1E0B953788032C0422AC011A5F58BAF8
-            3C4B35A4BC00AC73909097345C2DF4AE6C8C17FDFEB34DB4E4E13CC94220C219
-            2037F80CDD6B2F2B253E83ECE9E6CDC941FEDB88D6391AEB5FAF5E50AF704C3D
-            669758C3A46DF258C0D52F52195E642D10617B80A68AEC628551F7D3A6A596EE
-            6CF27BB4CDFD176B86196F7E97FA3938FA2FD54BCB1750066DAC16983F85DEB9
-            8DAC988D10A54969D7E3889FB11498704ED0B0FEF45550BACE17101AF7D3EEEF
-            5BAC91232C1C86147ECFD0B895E2F67A723363C51BA849FC316D8C36B9EA0A4F
-            36648AF75169BFC99AE13C2D80D6045D002D10B2071013C997A965FECA9A8F29
-            68A670276B84584F157F80AE8D3893FC0307B67222F927EA515449BD15DAB983
-            43CDCAEFCEA6CA1B7687ADBC217C0F30648B63749FF4953AB4BE975A7B933754
-            02A105B5FC165AF8D486C20202D7DA3835B26380B1D32B21CFD282A47E7A62B4
-            7E12C2D9D0B5B3CACE5E0DED8E53E5DBCCF1EEB3C8ADBC8E9550D8318021537C
-            9C526B3F777BABBE753B21D576CCA40FB71C8A2C600E47D6143E0C25BF4ACFD0
-            6687A6CFB6E83B904B3FC44A28EC1960AC700B39BADFB0B638E68448F43C45FE
-            E07552F85516ADED05DE41711F693D116A621E45E8736BB16DED790E09853D03
-            6415ADEC4ED030E84F7348449083CCA5FDB7C516083F0B2C9093255ACD5939AD
-            B928D2093DF7D763CF00069DD8C95234283C8589C1C5778901B06B80C9C1C38D
-            EFEB2CE3C06AEB1BEC1AC090709A96C6B6704F209DFC2D2BD6B06F0088888681
-            7C089BC53C2BD6B06F805CEA28ED0D9E66CD0E478E282AE9CF59B34A043D8010
-            E26196EC3032BC1F13E98BBC760F4E340670F128F2159A166DA16B87AD9689C6
-            000FA60A184A3CC15A585EC7F1F43E96AD138D013C941D67A8B16DD1BD8305A2
-            3340C9B4DA7CED838720CC162A48247EC95A244467806DA20CDDB387B5602C4F
-            3F8E07969B4F682323C2216008391B38DAFACAAF197BBBC1C5A81D8E76897A85
-            767DC354C4C0A73E9D10710F20A40CE60C95F91628DACA1BA23780AB686F603E
-            73ED8AB3DEDBA31888DE00E62B6F357288B50ED13B905B35CB4AA4446F0083D0
-            5D0C03F3E597CCB112393119C0DD4BADDA7ACED70E4DEBFEA964BB63B24888C7
-            005E77D61D7E4126B7B2100BF118C0209C0ED60434F54D0E863AEDED96F80C90
-            1E3CE0BDD5B918DA8CFDE8A7BE7AE23380F705A9B39BB556E6308B81F2AF588B
-            8DF80C60507AF1613080EDB86FF519D662235E034CA5FF4EF736FFE440539FDB
-            E6703506E2358047BB35C1F0BE583EB36DC31218C0FDB5F792B31E2526588A9D
-            E87783EDC8140F52CE1FF564F33DE064FA6A4F5E0296A00710B2EE759910B12D
-            7BDBB13406A8941FA3FB79EFA8BB77CEEE2BF4FF1BC60ABB68288CB3B6642C4D
-            0F3008B1831CC0924C7D3580FF017867A45F6DEE77530000000049454E44AE42
-            6082}
+            082E49444154785ED59B7B8C5D451DC7BF33E7EECBB67BEFDDB6026D45138C20
+            12C416FE5013FC43093EE10FC2C317C1108CECDE4B63AAD1582BA90D46858D6C
+            EFEEA235D04A6B5A28185452D9A631D2A41090A2124021D628906D2DEDDEDBED
+            637BF7DE33E36FCEF9ED7D6FB9F79C3967E32739677FBF997BE6F19B99DFCC9C
+            392B101783FF5D0CD17D2D203E4BDA4590EA0240AEF023D524943C4CC22140EF
+            819E9DC0F879A7FCB86889DE007715D6406103843695EFE5D077409F85161390
+            D884CDA9831C1809D1196070EABD70C48F8017BF08AC0998CF410DACDE09577F
+            0FE303FFE140AB446380A1A9EBA87BEFA0165CC221F5B8C559A89EA3E8728F78
+            7AC9391FB2F86E383DDD9EDE88C249BA7D056303BFE3106BD83740B6B09E5A6E
+            5353ABEBD23120F108E5F8388EA4F663B77039C6E746EDE0FCC2D5D0B80128DF
+            0CD1B58C6318D31BD66C402E750F0758C1AE0132F98D10E207ACF998D6131886
+            2A0EB7EDD88CC3943DEBC818EB9A7A91D63FC468FA6ED64263CF00D9C24D747F
+            C4572AFC0D425D87CD036FB0DE19774D5D082D4DB7FFB01F50E166EA098FB21C
+            0A3B06183CFE21149D3FE35DE8E310423F89EEB3B760F882D39E6A7ED325BB3C
+            F99D28A912C697BEE2C9EB0E2FC26CEF2E2AEAE73DDD700633E871AFAAFC2604
+            760C90C9FF81BAFEA75923DC1790387D357E76E18C5771E1ECA2AE7C19479EA0
+            EBDFBED8C4FBE84A7A92C2CBD0EE2D5E25BFF9461FCA8BF603CE955E9C879A40
+            6EA026CF6048FE1B9C4CE15375959F2DBF0DA5AEF72A6F709CB53595A78E513E
+            4EF73FB5BCFC381FF38C79D660D232699AB42BC86BBDBC4312BE0764F3CF5032
+            1F65CD3048E3F301964DFCDFE9BE17D3A9EFF8016DB2A4F0532ADD35C8A53FC8
+            21C6CFDC49F7715F31E86729FE63AC04229C0186DE5E01F9D25B95294FA9D7B0
+            2C7D19368AB2A71B86A6FE0121B76134F5630E698F4CE1BBD0EA369AFB2FE110
+            E06E9DC0B1FCCB90F2623F80A64675F92A8C2D9FF4F5CE0937049C2E724C35F3
+            BD10BFACABBC6D4CDA268F0A94B75786E0843380C6E758F251E2B72C4547631E
+            8D65E890904E507F80055ABC950F613CF54FD6A2C3E461F2AA50538600843480
+            58C5020D87C47C531BA117B3D03E42B7DE4718EAF2AA294300823BC1ECB17E5A
+            DB9B39DD47EBEDB444BD95B52AC609FA4EABFADBF6487A4EB5D609CE91C93F4C
+            BEE0ABAC014595C296814ED3F708DE03A4D3F0ACF6E7FDF9310B9C4EAE73D090
+            574FA2F52EB20D821B60245DA082F8DB598310FC762706EAF23A5D426E09ED34
+            8311CE07286116393EAE58C952336E718ABCF54FEA2EBC55BF1D06B6D6FF4657
+            D36EA4362F77D161E33058EB98700BA16C7E8C9218F4156A8962DFF2A6B1687C
+            80A1712C7FF9D8590C247A58A3A6D01FA15EF557D628EDA95DB41FB8A2E9B9AF
+            4F25D133434BE245BCB10AB727083B0BF895F3A002F5CACFB0528F9C7C3FEE9C
+            3A5277D556DEA04AFBEAE221AEE7987ABC3CE62A6F107B5908445803D4BFB074
+            F12596AA48791658E52021CFABBB9AE85E5A1F2F7AFD671B68CAC3798A854084
+            3340AEFF59BA575F564A7C01D9138D9B937DFCB71EAD7334D6BF51B9A05EE798
+            5ACC2EB18A49DBE43187AB5FA532BCCA5A20C2F6004D15D9C10AA3EEA34D4B35
+            DDE9E4F7699BFB2FD60C93DEFC2EF54138FAB9CAA5E52B2881365673CC1E47F7
+            CC7A56CC4688D2A4B46B71C4CF590A4C382768587BE262285DE30B088DFB68F7
+            F76DD6C811E60F400ABF6768DC4471BB3DB991A1C235D424FE9836461B5D7691
+            271B32857BA9B4DF62CD708616402B822E80E608D9038891E46BD432CFB3E663
+            0A9AC9DFC11A21D652C5EFA76B3D4E267FCF81CD1C4DFE917A1455526F86766E
+            E750B3F2BBA3A1F2869D612B6F08DF030CD9C210DD477DA506ADEFA1D6DEE00D
+            954068412DBF89163ED5A13087C095364E8DEC1860E8C452C853B420A99D9E18
+            AD9F8270D675ECACB2D39742BBC354F91673BCFB02724BAF622514760C60C814
+            9EA0D45ACFDDDEAA6FD57648B51593E9034D87227398C39115F98F43C9AFD133
+            B4D9A1E9B325FA76E4D20FB1120A7B0618CADF408EEE31D6E6C79C1089AEA7C9
+            1FBC490ABFCAA2B5BDC07B28EE13CD27420DCCA2007D7A25B6AC3CC321A1B067
+            80ACA295DD511A06BD690E89087290B9B4FFB6D802E167813972B248AB392BA7
+            35E7443AA1E7FE5AEC19C0A013DB598A0685A731D23FFF2E3100760D30DA7FA0
+            FE7D9D651C586D7D835D0318124EC3D2D816EE51A493BF61C51AF60D0011D130
+            900F61A39865C51AF60D904B1DA2BDC133ACD9E1A5BF282AE92F58B34A043D80
+            10E26196EC70F9151318499FE3B57B70A231808B473155A669D116BA7AD86A99
+            680CF0402A8F81C493AC85E54D1C49EF61D93AD118C043D971861A5BE6DD3B58
+            203A03144DABCD563F7808C274BE8C44E241D622213A036C1125E8AE5DAC0563
+            71FA09DCBFD87C421B19110E0143C8D9C0D1D6577E8DD8DB0DCE47F570B443D4
+            EBB4EBBB848A18F8D4A71D22EE018494C19CA132DF02455B7943F4067015ED0D
+            CC67AE1D71CA7B7B1403D11BC07CE5ADD6EC67AD4DF436E4964DB31229D11BC0
+            207407C3C07CF92573AC444E4C06707753AB369FF3B542AF9EC058B2D5315924
+            C46300AF3BEB36BF20939B598885780C60104E1B6B029AFA46FB439DF6764A7C
+            0648F7EFF5DEEA9C0B6DC67EF4535F2DF119C0FB82D4D9C95A333398465FE957
+            ACC5467C0630283DFF30E8C356DCBBFC246BB111AF01C6D22FD2BDC53F39D0D4
+            E7B6385C8D81780DE0D16A4DB07A4F2C9FD9B660010CE0FEDA7BC9598B12232C
+            C54EF4BBC156640AFB28E74F7AB2F91E70347DA9272F000BD0030859F3BA4C88
+            D896BDAD581803944B8FD3FD8C77D4DD3D63F715FAFF0D43F91D341486595B30
+            16A6071884D8460E6041A6BE2AC0FF000E3CA466168A04390000000049454E44
+            AE426082}
           FileName = 'D:\'#193'rea de Trabalho\icon.png'
         end>
       Position.X = 104.000000000000000000
@@ -120,14 +120,6 @@ object AddBusStopForm: TAddBusStopForm
       StyleLookup = 'priortoolbutton'
       Text = 'SpeedButton1'
       OnClick = SpeedButton1Click
-    end
-    object CbbBeacon: TComboBox
-      Position.X = 343.000000000000000000
-      Position.Y = 10.000000000000000000
-      Size.Width = 106.000000000000000000
-      Size.Height = 22.000000000000000000
-      Size.PlatformDefault = False
-      TabOrder = 1
     end
     object Image2: TImage
       MultiResBitmap.Height = 64
@@ -215,16 +207,61 @@ object AddBusStopForm: TAddBusStopForm
       Size.PlatformDefault = False
       Visible = False
     end
-    object EditDescription: TEdit
-      Touch.InteractiveGestures = [LongTap, DoubleTap]
+    object Panel1: TPanel
+      Align = Client
+      Padding.Left = 5.000000000000000000
+      Padding.Top = 8.000000000000000000
+      Padding.Bottom = 8.000000000000000000
+      Size.Width = 402.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
       TabOrder = 2
-      Position.X = 240.000000000000000000
-      Position.Y = 10.000000000000000000
+      object EditDescription: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        Align = Left
+        TabOrder = 2
+        Position.X = 5.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 100.000000000000000000
+        Size.Height = 24.000000000000000000
+        Size.PlatformDefault = False
+      end
+      object CbbBeacon: TComboBox
+        Align = Left
+        Margins.Left = 5.000000000000000000
+        Position.X = 110.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 106.000000000000000000
+        Size.Height = 24.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 1
+      end
+      object BtnSaveRoutes: TButton
+        Align = Left
+        Margins.Left = 5.000000000000000000
+        Position.X = 321.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 80.000000000000000000
+        Size.Height = 24.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 3
+        Text = 'Salvar'
+        OnClick = BtnSaveRoutesClick
+      end
+      object CbbBusLines: TComboBox
+        Align = Left
+        Position.X = 216.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 100.000000000000000000
+        Size.Height = 24.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 4
+      end
     end
   end
   object LvBusStop: TListView
-    ItemAppearanceClassName = 'TListItemAppearance'
-    ItemEditAppearanceClassName = 'TListItemShowCheckAppearance'
+    ItemAppearanceClassName = 'TImageListItemAppearance'
+    ItemEditAppearanceClassName = 'TImageListItemDeleteAppearance'
     HeaderAppearanceClassName = 'TListHeaderObjects'
     FooterAppearanceClassName = 'TListHeaderObjects'
     Align = MostBottom
@@ -233,5 +270,6 @@ object AddBusStopForm: TAddBusStopForm
     Size.Height = 120.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
+    ItemAppearanceObjects.ItemObjects.Accessory.Visible = False
   end
 end
