--- a/MobileBus/app/GUI/ListBeacons.fmx
+++ b/MobileBus/app/GUI/ListBeacons.fmx
@@ -54,6 +54,7 @@ object ListBeaconsForm: TListBeaconsForm
     TabOrder = 2
     ItemAppearanceObjects.ItemObjects.Text.Width = 63.000000000000000000
     ItemAppearanceObjects.ItemObjects.Text.Height = 44.000000000000000000
+    OnItemClick = ListView1ItemClick
   end
   object StyleBook1: TStyleBook
     Styles = <
