--- a/MobileBus/app/GUI/ListRoutes.fmx
+++ b/MobileBus/app/GUI/ListRoutes.fmx
@@ -3,14 +3,14 @@ object FrmListRoutes: TFrmListRoutes
   Top = 0
   Caption = 'FrmListRoutes'
   ClientHeight = 480
-  ClientWidth = 298
+  ClientWidth = 597
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   OnShow = FormShow
   DesignerMasterStyle = 0
   object ToolBar1: TToolBar
-    Size.Width = 298.000000000000000000
+    Size.Width = 597.000000000000000000
     Size.Height = 40.000000000000000000
     Size.PlatformDefault = False
     StyleLookup = 'ToolBar1Style1'
@@ -24,16 +24,23 @@ object FrmListRoutes: TFrmListRoutes
       Text = 'SpeedButton1'
       OnClick = SpeedButton1Click
     end
+    object BtnZerarRoutes: TButton
+      Position.X = 512.000000000000000000
+      Position.Y = 8.000000000000000000
+      TabOrder = 0
+      Text = 'Zerar tempo'
+      OnClick = BtnZerarRoutesClick
+    end
   end
   object Memo1: TMemo
     Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
     DataDetectorTypes = []
     Align = Client
-    Size.Width = 298.000000000000000000
+    Size.Width = 597.000000000000000000
     Size.Height = 440.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 2
-    Viewport.Width = 294.000000000000000000
+    Viewport.Width = 593.000000000000000000
     Viewport.Height = 436.000000000000000000
   end
 end
